[package]
name = "uuid-enum-proc-macros"
version = "0.1.0"
edition = "2021"

authors = ["metastable-void"]
description = "UUID-based enums (proc-macros crate)"
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/uuid-enum-proc-macros"
homepage = "https://github.com/metastable-void/uuid-enum-proc-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
uuid = "1"
